# SQL-OpenEnv

./: .gitignore  Dockerfile  LICENSE  Meta_openenv_hackathon_masterplan.md  README.md  inference.py  openenv.yaml  pyproject.toml
server/: app.py
sql_env/: __init__.py  client.py  environment_design.md  inference.py  models.py  pyproject.toml
sql_env/server/: Dockerfile  __init__.py  app.py  sql_environment.py
